--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ language: ruby
 env:
   matrix:
     - BUILDER=qt5builder/ubuntu-16.04 BRANCH=5.7.0
+    - BUILDER=qt5builder/ubuntu-14.04 BRANCH=5.7.0
 
 before_install:
   ./build-containers.sh
