Added other workaround to trvis ci limitations
Assuming it's still a fair use, and their tooling just fails to detect
build is going on corrctly.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,6 @@ before_install:
   ./build-containers.sh
 
 install:
+  while true; do sleep 10; echo $(date); done &
   ./build-qt.sh "$BUILDER" "$BRANCH" > log.txt
+  kill %-1
